--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
+    "katex": "^0.16.22",
     "next": "^15.4.5",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-katex": "^3.1.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2"
   }
